Name: ztile
Version: 0.1.0
Description: Square and Hex tiles for games.
License: AllRightsReserved
License-file: LICENSE
Author: Linus Arver
Maintainer: linusarver@gmail.com
Build-Type: Simple
Cabal-Version: >=1.2

library
  Hs-source-dirs: src
  Ghc-options: -threaded -Wall
  Build-Depends: base >= 3
    , containers >= 0.5.0.0
    , fgl >= 5.4.2.4
    , graphviz >=2999.16.0.0
    , mwc-random >= 0.13.1.0
    , primitive >= 0.5.1.0
    , utility-ht >= 0.0.9
    , vector >= 0.10.9.1
  Exposed-Modules:
    ZTile
    ZTile.PathFinding
    ZTile.Test
    ZTile.Util
