name: ztile
version: 0.1.0.0
synopsis: Square and Hex tiles for games.
license: FreeBSD
license-file: LICENSE
author: Linus Arver
maintainer: linusarver@gmail.com
category: Game
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  exposed-modules:
      ZTile
    , ZTile.Util
    , ZTile.Test
    , ZTile.PathFinding
  -- other-modules:
  other-extensions: RecordWildCards
  build-depends:
      base >=4.7 && <4.8
    , containers >=0.5 && <0.6
    , fgl >=5.4 && <5.5
    , mwc-random >=0.13 && <0.14
    , primitive >=0.5 && <0.6
    , QuickCheck >=2.7 && <2.8
    , tasty >= 0.8.0.4
    , tasty-quickcheck >= 0.8.0.3
    , utility-ht >= 0.0.10
    , vector >=0.10 && <0.11
  hs-source-dirs: src
  default-language: Haskell2010

executable ztile-test
  main-is: ztile-test.lhs
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <4.8
    , containers >=0.5 && <0.6
    , fgl >=5.4 && <5.5
    , mwc-random >=0.13 && <0.14
    , primitive >=0.5 && <0.6
    , QuickCheck >=2.7 && <2.8
    , tasty >= 0.8.0.4
    , tasty-quickcheck >= 0.8.0.3
    , utility-ht >= 0.0.10
    , vector >=0.10 && <0.11
