name: ztile
version: 0.1.0.1
synopsis: Square and Hex tiles for games.
license: FreeBSD
license-file: LICENSE
author: Linus Arver
maintainer: linusarver@gmail.com
category: Game
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  exposed-modules:
      ZTile
    , ZTile.Util
    , ZTile.Test
    , ZTile.PathFinding
  -- other-modules:
  other-extensions: RecordWildCards
  build-depends:
      base >=4.7.0.0 && <4.8.0.0
    , containers >=0.5 && <0.6
    , fgl >=5.5 && <5.6
    , mwc-random >=0.13.1.1 && <0.14
    , primitive >=0.5.2.1 && <0.6
    , QuickCheck >=2.7.6 && <2.8
    , tasty >= 0.8.0.4
    , tasty-quickcheck >= 0.8.0.3
    , utility-ht >= 0.0.10
    , vector >=0.10.9.1 && <0.11
  hs-source-dirs: src
  default-language: Haskell2010

executable ztile-test
  main-is: ztile-test.lhs
  hs-source-dirs: src
  build-depends:
      base >=4.7.0.0 && <4.8.0.0
    , containers >=0.5 && <0.6
    , fgl >=5.5 && <5.6
    , mwc-random >=0.13.1.1 && <0.14
    , primitive >=0.5.2.1 && <0.6
    , QuickCheck >=2.7.6 && <2.8
    , tasty >= 0.8.0.4
    , tasty-quickcheck >= 0.8.0.3
    , utility-ht >= 0.0.10
    , vector >=0.10.9.1 && <0.11
